totally fixed weather not showing after refresh.  Added to readme. Cleaned up UI with spacing between cards.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,24 +44,6 @@
     margin-left: auto;
 }
 
-/* 
- * Always set the map height explicitly to define the size of the div element
- * that contains the map. 
- */
- #map {
-    height:100%;
-  }
-  
-  /* 
-   * Optional: Makes the sample page fill the window. 
-   */
-  html,
-  body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
   #journal-entry {
     background-color: var(--cream);
     color: var(--black);
